build: migrate reactor to JDK 25